<resources>
    <string name="app_name">ClashofWords</string>
    <string name="SHA1_key">SHA1: 42:D4:EE:AF:41:27:6F:26:07:EB:A7:D6:00:B7:45:58:06:2B:95:2D</string>
    <string name="SHA256_key">SHA-256: C9:CD:97:2B:12:E8:94:26:AF:47:88:96:8C:B2:43:0F:34:70:55:57:DA:37:6F:60:7E:A2:9A:1F:53:86:7F:9C</string>
    <string name="google_api_key">YOUR_GOOGLE_API_KEY</string>"
    <string name="titleLoginTitle">Kelime Savaşı</string>
    <string name="guestLoginTitle">Misafir Girişi</string>
    <string name="googleLoginTitle">Google ile Giriş</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_shop">Shop</string>
    <string name="title_friends">Friends</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_picture">Profile Picture</string>

    <string name="profilepictureContentResource">Profile Picture</string>
    <string name="playTitle">Oyna</string>
    <string name="energyiconContentResource">Energy Icon</string>
    <string name="one">1</string>

    <string name="logOut">Çıkış Yap</string>
    <string name="deleteAccount">Hesabı Sil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>