<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:windowBackground">

    <!-- Kart Görünümü (Merkezde) -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="24dp"
        android:background="?attr/colorSurface">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Başlık -->
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/titleLoginTitle"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <!-- Misafir Girişi Butonu -->
            <Button
                android:id="@+id/guestLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableLeft="@drawable/ppicon"
                android:text="@string/guestLoginTitle"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"/>

            <!-- Google ile Giriş Butonu -->
            <Button
                android:id="@+id/googleLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondary"
                android:drawableLeft="@drawable/googleicon"
                android:text="@string/googleLoginTitle"
                android:textColor="@color/white"
                android:layout_marginTop="8dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>